src/objects/Queue_To_Department_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Email__c</fullName>
        <label>Program Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Queue_ID__c</fullName>
        <label>Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Auto_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Auto Response</label>
        <type>Checkbox</type>
    </fields>
    <label>Queue To Department Mapping</label>
    <pluralLabel>Queue To Department Mappings</pluralLabel>
</CustomObject>